--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -138,15 +138,15 @@ $(call recurse,check-world,src/test src/pl src/interfaces/ecpg contrib src/bin g
 # probably pull anything order-dependent out of recurse() and back into the
 # recipe body).
 ICW_TARGETS  = src/test src/pl src/interfaces/gppc
-ICW_TARGETS += contrib/auto_explain contrib/citext
-ICW_TARGETS += contrib/file_fdw contrib/formatter_fixedwidth
-ICW_TARGETS += contrib/extprotocol contrib/dblink
-ICW_TARGETS += contrib/indexscan contrib/hstore contrib/pgcrypto
-# sslinfo depends on openssl
-ifeq ($(with_openssl), yes)
-ICW_TARGETS += contrib/sslinfo
-endif
-ICW_TARGETS += gpcontrib src/bin gpMgmt/bin
+#ICW_TARGETS += contrib/auto_explain contrib/citext
+#ICW_TARGETS += contrib/file_fdw contrib/formatter_fixedwidth
+#ICW_TARGETS += contrib/extprotocol contrib/dblink
+#ICW_TARGETS += contrib/indexscan contrib/hstore contrib/pgcrypto
+## sslinfo depends on openssl
+#ifeq ($(with_openssl), yes)
+#ICW_TARGETS += contrib/sslinfo
+#endif
+#ICW_TARGETS += gpcontrib src/bin gpMgmt/bin
 
 $(call recurse,installcheck-world, $(ICW_TARGETS),installcheck)
 
