Make the macro of FAULT_INJECTOR configurable
Definition FAULT_INJECTOR is hardcoded in a header(pg_config_manual.h) file.
Fault injector is useful, but it may introduce some issues in production
stage, like runtime cost, security problems. It's better to enable this
feature in development and disable it in release.

To achieve this target, we add a configure option to make fault injector
configurable. When fault injector is disabled, some tests using this feature
should be avoided to run ICW. Under isolation2 and regress, there are a lot of
tests. Luckily, there is a script file, named scan_flaky_fault_injectors.sh,
to check that tests using fault injector shouldn't run concurrently with
other tests. We add a similar script file, named ignore_fault_injectors.sh,
to comment out the tests using fault injectors. These tests will not run if fault
injector is disabled, so we may run tests as many as possible.

--- a/gpcontrib/Makefile
+++ b/gpcontrib/Makefile
@@ -17,12 +17,15 @@ ifeq "$(enable_debug_extensions)" "yes"
                gp_distribution_policy \
                gp_internal_tools \
                gp_debug_numsegments \
-               gp_inject_fault \
                gp_replica_check
 else
 	recurse_targets = gp_sparse_vector \
                gp_distribution_policy \
                gp_internal_tools
+endif
+
+ifeq "$(enable_faultinjector)" "yes"
+	recurse_targets += gp_inject_fault
 endif
 
 ifeq "$(with_zstd)" "yes"
