Make the macro of FAULT_INJECTOR configurable
Definition FAULT_INJECTOR is hardcoded in a header(pg_config_manual.h) file.
Fault injector is useful, but it may introduce some issues in production
stage, like runtime cost, security problems. It's better to enable this
feature in development and disable it in release.

To achieve this target, we add a configure option to make fault injector
configurable. When fault injector is disabled, some tests using this feature
should be avoided to run ICW. Under isolation2 and regress, there are a lot of
tests. Luckily, there is a script file, named scan_flaky_fault_injectors.sh,
to check that tests using fault injector shouldn't run concurrently with
other tests. We add a similar script file, named ignore_fault_injectors.sh,
to comment out the tests using fault injectors. With the help of
ignore_fault_injector.sh, we add some new schedule files under directories
isolations and regress which have the pattern name of XXX_no_faultinjector_schedule.
Only tests that don't depend on fault injector will not run if fault
injector is disabled, so we may run tests as many as possible.

--- a/configure.in
+++ b/configure.in
@@ -800,6 +800,15 @@ PGAC_ARG_BOOL(enable, cassert, no, [enable assertion checks (for debugging)],
                          [Define to 1 to build with assertion checks. (--enable-cassert)])])
 
 #
+# Enable fault injector
+#
+PGAC_ARG_BOOL(enable, faultinjector, no, [enable fault injector],
+              [AC_DEFINE([FAULT_INJECTOR], 1,
+                         [Define to 1 to build with fault injector. (--enable-faultinjector)])])
+AC_MSG_RESULT([checking whether to build with FAULT_INJECTOR... $enable_faultinjector])
+AC_SUBST(enable_faultinjector)
+
+#
 # Enable GPORCA optimizer
 #
 PGAC_ARG_BOOL(enable, orca, yes, [disable ORCA optimizer],
