Move tests that depend on fault injector to its new specific schedule files.
Now greenplum_schedule only contains tests that don't depend on fault injector.
The other part tests are saved in greenplum_faultinjector_schedule.
The same behavior applies isolation2_schedule and isolation2_resgroup_schedule.

--- a/src/test/isolation2/Makefile
+++ b/src/test/isolation2/Makefile
@@ -54,7 +54,6 @@ data:
 .PHONY: scan_flaky_fault_injectors
 scan_flaky_fault_injectors:
 	$(top_builddir)/src/test/regress/scan_flaky_fault_injectors.sh
-	enable_faultinjector=$(enable_faultinjector) $(top_builddir)/src/test/regress/ignore_fault_injectors.sh
 
 pg_isolation2_regress$(X): isolation2_main.o pg_regress.o submake-libpq submake-libpgport
 	$(CC) $(CFLAGS) $(filter %.o,$^) $(libpq_pgport) $(LDFLAGS) $(LDFLAGS_EX) $(LIBS) -o $@
@@ -70,6 +69,12 @@ install: all gpdiff.pl gpstringsubs.pl
 
 installcheck: install
 	./pg_isolation2_regress $(EXTRA_REGRESS_OPTS) --init-file=$(top_builddir)/src/test/regress/init_file --init-file=./init_file_isolation2 --bindir='$(bindir)' --inputdir=$(srcdir) --schedule=$(srcdir)/isolation2_schedule
+ifeq ($(enable_faultinjector),yes)
+	./pg_isolation2_regress $(EXTRA_REGRESS_OPTS) --init-file=$(top_builddir)/src/test/regress/init_file --init-file=./init_file_isolation2 --bindir='$(bindir)' --inputdir=$(srcdir) --schedule=$(srcdir)/isolation2_faultinjector_schedule
+endif
 
 installcheck-resgroup: install
 	./pg_isolation2_regress $(EXTRA_REGRESS_OPTS) --init-file=$(top_builddir)/src/test/regress/init_file --init-file=./init_file_resgroup --bindir='$(bindir)' --inputdir=$(srcdir) --dbname=isolation2resgrouptest  --schedule=$(srcdir)/isolation2_resgroup_schedule
+ifeq ($(enable_faultinjector),yes)
+	./pg_isolation2_regress $(EXTRA_REGRESS_OPTS) --init-file=$(top_builddir)/src/test/regress/init_file --init-file=./init_file_resgroup --bindir='$(bindir)' --inputdir=$(srcdir) --dbname=isolation2resgrouptest  --schedule=$(srcdir)/isolation2_resgroup_faultinjector_schedule
+endif
